RESOLVED FIXED294589
RELEASE_ASSERT fired in WebKit::ModelProcessModelPlayer::didUnload
https://bugs.webkit.org/show_bug.cgi?id=294589
Summary RELEASE_ASSERT fired in WebKit::ModelProcessModelPlayer::didUnload
Ada Chan
Reported 2025-06-16 19:03:30 PDT
RELEASE_ASSERT fired in WebKit::ModelProcessModelPlayer::didUnload
Attachments
Ada Chan
Comment 1 2025-06-16 19:03:30 PDT
Ada Chan
Comment 2 2025-06-16 19:06:39 PDT
EWS
Comment 3 2025-06-17 23:39:57 PDT
Committed 296362@main (929e411f82b6): <https://commits.webkit.org/296362@main> Reviewed commits have been landed. Closing PR #46831 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.